# rust_learning_projects

./: README.md
diesel_demo/: .env  Cargo.toml
diesel_demo/migrations/2018-10-21-102337_create_posts/: down.sql  up.sql
diesel_demo/src/: lib.rs  models.rs
diesel_demo2/: .env  Cargo.toml  build_diesel_cli.sh
diesel_demo2/migrations/2021-02-07-232302_create_posts/: up.sql
diesel_demo2/migrations/2021-02-07-232309_create_users/: up.sql
diesel_demo2/src/: lib.rs  models.rs  schema.rs
pluggable_webapp/: Cargo.toml
rbatis_demo1/: .gitignore  Cargo.toml
rbatis_demo1/doc/: Links.md
rbatis_demo1/src/: main.rs
refl_test2/: Cargo.toml
refl_test2/src/: main.rs
rust_learning/: .gitignore  Cargo.toml
rust_learning/src/: main.rs
rust_reflection_1/: Cargo.toml
rust_reflection_1/src/: main.rs  main.rs.try1
seaorm_demo/: Cargo.toml
seaorm_demo/src/: main.rs  post.rs  setup.rs  user.rs
seaorm_demo/src/entities/: book.rs  mod.rs  post.rs  user.rs
slotfinder/: .gitignore  Cargo.toml
slotfinder/src/: main.rs  slotfinder.rs
