[package]
name = "diesel_demo2"
version = "0.1.0"
authors = ["Rainer Datzer <rdatz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#diesel = { version = "2.0.0", path = "../../../diesel", features = ["postgres"] }
#diesel = { version = "2.0.0", features = ["sqlite"] }
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15"
quick-xml = { version = "0.17", features = [ "serialize" ] }
serde = { version = "1.0.119", features = ["derive"] }
serde-value = "0.7.0"
serde_derive = "1.0.119"
serde_json = "1.0"
bincode = "1.3.1"

[[bin]]
name = "show_posts"
doc = false

[[bin]]
name = "write_post"
doc = false

[[bin]]
name = "delete_post"
doc = false

[[bin]]
name = "publish_post"
doc = false

[lib]
doc = false

