[package]
name = "refl_test2"
version = "0.1.0"
authors = ["Rainer Datzer <rdatz@gmx.de>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = "1.0.119"
quote = "1.0"
syn = "1.0"
quick-xml = { version = "0.17", features = [ "serialize" ] }
serde = { version = "1.0.119", features = ["derive"] }
serde-value = "0.7.0"
serde_derive = "1.0.119"
serde_json = "1.0"
bincode = "1.3.1"

