[package]
name = "seaorm_demo"
version = "0.1.0"
authors = ["Rainer Datzer <rdatz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = [ "attributes", "tokio1" ] }
listenfd = "0.3.3"
tera = "1.8.0"
sea-orm = { version = "^0.3.0", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ], default-features = false }

sqlx-core = "0.5.7"
tokio = { version = "1.12.0", features = ["full"] }
# json (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Date time (required)
chrono = { version = "0.4", features = ["serde"] }

futures = { version = "0.3.17", default-features = false }

dotenv = "0.15"

# logging lib(required)
log = "0.4"
fast_log="1.3"

# BigDecimal lib(optional)
bigdecimal = "0.3.0"

# # rbatis lib(required)
# rbatis =  { version = "1.8" } 

